Working experiment for write up